# airflow_docker

./: create_order.py  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
dags/: dag_with_aws_s3.py  dag_with_bash_operator.py  dag_with_catchup_and_backfill.py  dag_with_cron_expression.py  dag_with_hooks.py  dag_with_postgres_operator.py  dag_with_python_operator.py  dag_with_taskflow_api.py  get_orders.txt
data/: data.csv  output.csv
